--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "3rapreentregamorrallajuan",
+  "name": "entregaMorrallaJuan",
   "version": "1.0.0",
   "description": "Entrega Proyecto Final de alumno Juan Morralla - Corder House - Desarrollo Web",
   "main": "index.js",
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jmiguelmorralla/3raPreEntregaMorrallaJuan.git"
+    "url": "git+https://github.com/jmiguelmorralla/proyectoFinalJuanMorralla.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jmiguelmorralla/3raPreEntregaMorrallaJuan/issues"
+    "url": "https://github.com/jmiguelmorralla/proyectoFinalJuanMorralla/issues"
   },
-  "homepage": "https://github.com/jmiguelmorralla/3raPreEntregaMorrallaJuan#readme",
+  "homepage": "https://github.com/jmiguelmorralla/proyectoFinalJuanMorralla#readme",
   "devDependencies": {
     "node-sass": "^7.0.3",
     "nodemon": "^2.0.20"
