--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "entregaMorrallaJuan",
+  "name": "3ra-pre-entregajuanmorralla",
   "version": "1.0.0",
   "description": "Entrega Proyecto Final de alumno Juan Morralla - Corder House - Desarrollo Web",
   "main": "index.js",
